# basic-algorithm

./: .gitattributes  .gitignore  CMakeLists.linux.txt  CMakeLists.txt  CMakeLists.windows.txt  README.md  main.h  sonar-project.properties
arithmetic/: main.c  main.h
arithmetic/digits-product/: digits-product.c
arithmetic/factor-sum/: README.md  factor-sum.c
arithmetic/greatest-common-prime-divisor/: greatest-common-prime-divisor.c
arithmetic/is-prime/: is-prime.c
arithmetic/last-digit-diff-zero/: README.md  last-digit-diff-zero.c
arithmetic/max-fraction/: max-fraction.c
arithmetic/number-zero-digits/: README.md  number-zero-digits.c
arithmetic/pages-numbering/: README.md  pages-numbering.c
arithmetic/prime-sum/: prime-sum.c
counting/: main.c  main.h
counting/characters-rearrangement/: README.md  characters-rearrangement.c
counting/check-equal-frequency/: README.md  check-equal-frequency.c
counting/common-character-count/: common-character-count.c
counting/different-squares/: different-squares.c
counting/different-substrings-trie/: different-substrings-trie.c
counting/different-symbols-naive/: different-symbols-naive.c
counting/different-values-in-multiplication-table-2/: different-values-in-multiplication-table-2.c
counting/is-pangram/: README.md  is-pangram.c
geometry/: main.c
graph/: main.c  main.h
graph/count-triangles/: README.md
graph/find-square-side/: find-square-side.c
graph/inside-circle/: README.md  inside-circle.c
graph/is-rectangle/: README.md
include/: arithmetic.h  counting.h  geometry.h  graph.h  main.h  matrix.h  numbers-sequence.h  numbers_sequence.h  searching.h  sorting.h  sorting_test.h  string-handling.h  util.h
lib/: common-matrix.h  common-number.h  common-string.h  common-utility.h  common-var.h
lib/c-commons/: common-array.h  common-matrix.h  common-utility.h  common_matrix.h  common_utility.h  commons.h
lib/googletest/docs/: faq.md
lib/googletest/googletest/: CMakeLists.txt
matrix/: main.c  main.h
matrix/bishop-and-pawn/: README.md  bishop-and-pawn.c
matrix/bishop-diagonal/: README.md  bishop-diagonal.c
matrix/chess-board-cell-color/: chess-board-cell-color.c
matrix/chess-knight/: README.md  chess-knight.c
matrix/spiral-numbers/: README.md  spiral-numbers.c
matrix/sudoku-checking/: README.md  sudoku-checking.c
menu/: arithmetic.menu.txt  basic-algorithms.menu.txt  counting.menu.txt  geometry.menu.txt  graph.menu.txt  matrix.menu.txt  number-sequence.menu.txt  numbers-sequence.menu.txt  searching.menu.txt  sorting.menu.txt  string-handling.menu.txt
number-sequence/: main.c
searching/: main.c
sorting/: main.c  main.h
sorting/sort-array/: README.md  sort-array-merge-sort.c
src/: main.c
src/arithmetic/: arithmetic.c  digits_product.c  digits_product.md  factor_sum.c  greatest_common_prime_divisor.c  greatest_common_prime_divisor.md  is_prime.c  is_prime.md  last_digit_diff_zero.c  max_fraction.c  number_zero_digits.c  pages_numbering.c  prime_sum.c
src/arithmetic/digits-product/: digits-product.c
src/arithmetic/factor-sum/: factor-sum.c
src/arithmetic/greatest-common-prime-divisor/: greatest-common-prime-divisor.c
src/counting/: characters_rearrangement.c  check_equal_frequency.c  common_character_count.c  common_character_count.md  counting.c  different_squares.c  different_substrings_trie.c  different_substrings_trie.md  different_symbols_naive.c  different_symbols_naive.md  different_values_in_multiplication_table_2.c  is_pangram.c
src/geometry/: count_triangles.c  find_square_side.c  geometry.c  inside_circle.c  is_rectangle.c
src/graph/: bfs_distances_unweighted_graph.c  bfs_distances_unweighted_graph.md  component_size.c  component_size.md  graph.c  is_tournament.c  is_tournament.md
src/matrix/: bishop_and_pawn.c  bishop_diagonal.c  bishop_diagonal.md  chess_board_cell_color.c  chess_knight.c  find_path.c  find_path.md  matrix.c  spiral_numbers.c  sudoku_checking.c
src/numbers-sequence/: numbers-sequence.c
src/numbers_sequence/: alternating_sums.c  alternating_sums.md  is_arithmetic_progression.c  is_monotonous.c  is_monotonous.md  longest_sequence.c  longest_sequence.md  make_array_consecutive.c  make_array_consecutive.md  numbers-sequence.c  numbers_sequence.c  prefix_sums.c  prefix_sums.md
src/searching/: beautiful_array.c  beautiful_array.md  count_place.c  count_place.md  missing_value.c  missing_value.md  search_element.c  search_element.md  search_element_2.c  search_element_2.md  searching.c
src/sorting/: are_similar.c  are_similar.md  digital_sum_sort.c  digital_sum_sort.md  sort_array.c  sort_array.md  sort_array_merge_sort.md  sort_array_quick_sort.c  sort_by_height.c  sort_by_height.md  sort_by_length.c  sort_by_length.md  sorting.c
src/string-handling/: string-handling.c
src/string_handling/: amend_the_sentence.c  amend_the_sentence.md  check_palindrome.c  check_palindrome.md  check_strong_password.c  check_strong_password.md  format_string.c  is_tandem_repeat.c  line_encoding.c  question_correction.c  string_handling.c  strings_crossover.c  strings_crossover.md  truncate_string.c
src/util/: constants.c
string-handling/: main.c  main.h
string-handling/amend-the-sentence/: amend-the-sentence.c
string-handling/check-palindrome/: check-palindrome.c
string-handling/check-strong-password/: check-strong-password.c
string-handling/format-string/: format-string.c
string-handling/is-tandem-repeat/: README.md  is-tandem-repeat.c
string-handling/line-encoding/: README.md  line-encoding.c
string-handling/question-correction/: README.md  question-correction.c
string-handling/strings-crossover/: strings-crossover.c
string-handling/truncate-string/: truncate-string.c
test/: arithmetic_test.cpp  geometry_test.cpp  graph_test.cpp  numbers_sequence_test.cpp  searching_test.cpp  sorting_test.cpp  string_handling_test.cpp
test/arithmetic-test/: arithmetic-test.cpp  bool-matrix.txt
test/geometry-test/: geometry-test.cpp
test/numbers-sequence-test/: numbers-sequence-test.cpp
test/resources/: 4_points.txt  counting_test.cpp
(+90 files in other folders)
